2010-04-26 Dietmar Warning
 * parser/inpgval.c: correct parsing of integer model parameter given as double 
   (e.g. capmod=3.000e+00)

2010-04-23 Holger Vogt
 * xpressn.c: agauss is no. 20
   main.c, inp.c, inpcom.c, compatmode.h, inpptree.h, ifeval.c, inpptree.c, ptfuncs.c:
   ngspice compatibility mode with various functions

2010-04-11 Dietmar Warning
 * Robert Larice patch to allow new operations in control blocks:
 * examples/new-check-3.sp, new-check-4.sp
 * src/include/fteparse.h, ngspice.h
 * src/frontend/parse*.*, evaluate.c, Makefile.am, src/misc/string.c, stringutil.h

2010-03-25 Dietmar Warning
 * Bill Swartz patch:
 * numparam/*.c, *.h, *.txt, misc/hash.c, string.c: local and global hash lists for subckts
 * misc/dstring.c, include/dstring.h, Makefile.am: dynamic string feature
 * analysis/cktop.c: remove the CR in some printf's
 
2010-03-20 Holger Vogt
 * variable.c:450 prevent ngspice from crashing after command 'unset zzz', 
   when zzz is not defined

2010-03-20 Holger Vogt
 * com_compose.c: comment corrected
 * subckt.c, cktdefs.h, acan.c, ifeval.c, inp2b.c, inpptree.c, cktinit.c:
   Variable HERTZ added to B source

2010-03-16 Holger Vogt
 * xpressn.c: remove lines 291,292

2010-03-09 Dietmar Warning
 * analysis/cktop.c: remove the CR in some printf's, need some tests with different terminals
 * frontend/inp.c: cut the ouput message if wrong parameter warning to have a chance 
   to read it
 * parser/inpgmod.c: want only the parameter names in output - not the values
 * devices/vbic/vbic.c: correct a typo of eais/eaic model parameter leading in wrong 
   temperature model

2010-03-08 Holger Vogt
 * parse.c, inpptree.c, inpptree-parser.y, inpptree-parser.c, inpptree-parser.h: 
   patches by R. Larice

2010-03-07 Holger Vogt
 * inpcom.c: test for .end improved (comments are now allowed in .end line)
 * xpressn.c: adding fcn sgn() to numparam function lib
 * inpptree.h,asrcacld.c,asrcload.c,asrcpzld.c,asrcset.c,ifeval.c,inpptree-parser.c,