@@ -1,3 +1,6 @@
+2010-05-08 Holger Vogt
+ * inpcom.c: patch 20/05/10 by Robert: avoid substraction from a builtin 1.0
+
 2010-04-26 Dietmar Warning
  * parser/inpgval.c: correct parsing of integer model parameter given as double 
    (e.g. capmod=3.000e+00)
